--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,49 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.allinonesocialapp.android">
+    package="messenger.people.messenger">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_CALL_LOG"
-        tools:node="remove"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo2"
+        android:icon="@drawable/logo5"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MyAppTheme"
         android:usesCleartextTraffic="true">
-
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-5550326882103592~9659191349"/>
-
-        <meta-data android:name="com.calldorado.AccountId" android:value="a1-ae4278ba-1337-4761-83f8-d6e612075959"/>
-        <meta-data android:name="com.calldorado.AppId" android:value="b0-ad45c5a4-3960-4a8f-8fd5-5a39e0a383d7"/>
-
+            android:value="ca-app-pub-5550326882103592~9659191349" />
         <meta-data
-            android:name="com.calldorado.LocalOptin"
-            android:value="enable"/>
+            android:name="com.calldorado.AccountId"
+            android:value="a1-ae4278ba-1337-4761-83f8-d6e612075959" />
+        <meta-data
+            android:name="com.calldorado.AppId"
+            android:value="b0-6d3570f5-be5a-49c1-90e9-c1e433a90c23" />
 
-        <activity android:name="com.allinonesocialapp.android.view.UsageStatsActivity"
+        <activity
+            android:name=".view.UsageStatsActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".view.CalldoRadoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.AboutActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.PagerActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.WebViewActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.HomeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.SplashActivity"
             android:screenOrientation="portrait">
-        </activity>
-        <activity android:name="com.allinonesocialapp.android.view.AboutActivity" android:screenOrientation="portrait"/>
-        <activity android:name="com.allinonesocialapp.android.view.PagerActivity" android:screenOrientation="portrait"/>
-        <activity android:name="com.allinonesocialapp.android.view.WebViewActivity" android:screenOrientation="portrait"/>
-        <activity android:name="com.allinonesocialapp.android.view.HomeActivity" android:screenOrientation="portrait"/>
-        <activity android:name="com.allinonesocialapp.android.view.SplashActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".receiver.SetupFragmentReceiver"
+            android:enabled="true">
+            <intent-filter android:priority="101">
+                <action android:name="android.intent.action.PHONE_STATE"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
